--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask
-Werkzeug
-nltk
-spacy
-chardet
-gunicorn
+Flask==2.3.3
+Werkzeug==2.3.7
+nltk==3.8.1
+spacy==3.7.2
+chardet==5.2.0
+gunicorn==21.2.0
